@@ -7,4 +7,6 @@
 1.0.1	[BUGFIX] Fixed errors in Tx_AdGoogleMapsApi_MapPlugin.js
 
 1.0.2	[FEATURE] Added min./max. zoom to Map Drawer.
-1.0.2	[TASK] Changed loading settings to Tx_Extbase_Configuration_BackendConfigurationManager in MapPlugin.php.
+		[BUGFIX] Fixed closeAllInfoWindows in Tx_AdGoogleMapsApi_MapPlugin.js
+		[BUGFIX] Added getTypoScriptSetup for extbase >= 1.3.0beta1 in MapDrawer.php and MapPlugin.php
+		[TASK] Changed loading settings to Tx_Extbase_Configuration_BackendConfigurationManager in MapPlugin.php.
